--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "^14.0.4",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
     "axios": "^1.7.9",
     "cors": "^2.8.5",
     "expo": "~52.0.23",
@@ -26,6 +28,7 @@
     "expo-font": "~13.0.2",
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.3",
+    "expo-network": "^7.0.5",
     "expo-router": "~4.0.15",
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
@@ -41,9 +44,11 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-udp": "^4.1.7",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "robotjs": "^0.6.0"
+    "robotjs": "^0.6.0",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
